# freqtrade-mcp-server

./: .gitignore  README.md  pyproject.toml
freqtrade_mcp_server/: __init__.py
